--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -112,3 +112,18 @@ th[role=columnheader]:not(.no-sort):hover:after {
 	visibility: visible;
 	opacity: 1;
 }
+
+.student {
+  margin: 10 px 2px;
+  padding: 2px;
+  border: 1ps solid gray;
+  background-color: antiquewhite;
+}
+
+.userName {
+  font-weight: bold;
+}
+
+.studentName {
+  color: palevioletred;
+}
